correct script-rename and species naming problem (acting variety to replace)

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -9,7 +9,7 @@
 #   - "dashboards::settings_relationship"
 #   - "dashboards::settings_sales"
 #   - "dashboards::settings_stocks"
-#   - "entities::list_entity_events"
+#   - "entities::list_events"
 #   - "entity_addresses::unroll"
 #   - "entity_natures::unroll"
 #   - "interfacers::autocomplete"
@@ -61,8 +61,8 @@
 #   - "product_natures::new"
 #   - "product_natures::show"
 #   - "product_natures::update"
-#   - "product_species::destroy"
-#   - "product_species::update"
+#   - "product_varieties::destroy"
+#   - "product_varieties::update"
 #   - "production_chain_conveyors::create"
 #   - "production_chain_conveyors::destroy"
 #   - "production_chain_conveyors::edit"
@@ -109,8 +109,8 @@
 __minimum__:
   actions:
   - "dashboards::index"
-  - "dashboards::list_my_future_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "dashboards::list_recent_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "dashboards::list_my_future_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "dashboards::list_recent_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "dashboards::welcome"
   - "help::index"
   - "help::show"
@@ -152,12 +152,12 @@ __public__:
   - "product_groups::list"
   - "product_groups::new"
   - "product_groups::show"
-  - "product_species::create"
-  - "product_species::edit"
-  - "product_species::index"
-  - "product_species::list"
-  - "product_species::new"
-  - "product_species::show"
+  - "product_varieties::create"
+  - "product_varieties::edit"
+  - "product_varieties::index"
+  - "product_varieties::list"
+  - "product_varieties::new"
+  - "product_varieties::show"
   - "products::create"
   - "products::edit"
   - "products::index"
@@ -461,7 +461,7 @@ manage_districts:
   - "districts::list"
   - "districts::new"
   - "districts::update"
-  - "interfacers::search_for_districts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_districts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
 # Gérer les modèles de document
 manage_document_templates:
   actions:
@@ -499,9 +499,9 @@ manage_entities:
   - "entity_addresses::update"
   - "interfacers::autocomplete_for_area_name"
   - "interfacers::autocomplete_for_entity_origin"
-  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
 # Gérer les types de fiche
 manage_entities_natures:
   actions:
@@ -881,7 +881,7 @@ manage_product_categories:
   - "product_nature_categories::edit"
   - "product_nature_categories::index"
   - "product_nature_categories::list"
-  - "product_nature_categories::list_products # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "product_nature_categories::list_products # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_nature_categories::new"
   - "product_nature_categories::show"
   - "product_nature_categories::update"
@@ -900,7 +900,7 @@ manage_products:
   - "product_natures::destroy # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::edit # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "product_natures::list_components # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "product_natures::list_components # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list_prices # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list_stock_moves # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list_stocks # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
@@ -1049,8 +1049,8 @@ manage_taxes:
   actions:
   - "dashboards::accountancy"
   - "dashboards::accountancy"
-  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "taxes::create"
   - "taxes::destroy"
   - "taxes::edit"
