--- a/test/fixtures/product_varieties.yml
+++ b/test/fixtures/product_varieties.yml
@@ -18,7 +18,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: product_species
+# == Table: product_varieties
 #
 #  code         :integer          
 #  comment      :text             
@@ -32,13 +32,41 @@
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
-require 'test_helper'
+#
+# == Fixture: product_varieties
+#
+# product_varieties_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   name: "Lorem ipsum"
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-class ProductSpecyTest < ActiveSupport::TestCase
+product_varieties_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "BOVINS"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
 
-  # Replace this with your real tests.'
-  test "the truth" do
-    assert true
-  end
+product_varieties_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "NORMANDE"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
 
-end
+product_varieties_003:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  name: "CHAROLAISE"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
