--- a/installer/debian/build
+++ b/installer/debian/build
@@ -34,7 +34,7 @@ bundle install --quiet
 echo "production:" > config/database.yml
 echo "  adapter: sqlite3" >> config/database.yml
 echo "  database: db/production.sqlite3" >> config/database.yml
-rake assets:precompile RAILS_ENV=production
+bundle exec rake assets:precompile RAILS_ENV=production
 popd
 
 # Deactivates other adapters
