--- a/installer/win32/build
+++ b/installer/win32/build
@@ -28,7 +28,7 @@ if [ -n "`which makensis`" ]; then
     echo "production:" > config/database.yml
     echo "  adapter: sqlite3" >> config/database.yml
     echo "  database: db/production.sqlite3" >> config/database.yml
-    rake assets:precompile RAILS_ENV=production
+    bundle exec rake assets:precompile RAILS_ENV=production
     rm -f config/database.yml
     popd
     
