work in progress on product_indicator / indicator_nature with choices / phase / process.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -48,6 +48,32 @@
 #   - "product_groups::list_events"
 #   - "product_groups::list_products"
 #   - "product_groups::update"
+#   - "product_indicator_nature_choices::create"
+#   - "product_indicator_nature_choices::destroy"
+#   - "product_indicator_nature_choices::down"
+#   - "product_indicator_nature_choices::edit"
+#   - "product_indicator_nature_choices::new"
+#   - "product_indicator_nature_choices::up"
+#   - "product_indicator_nature_choices::update"
+#   - "product_indicator_natures::create"
+#   - "product_indicator_natures::destroy"
+#   - "product_indicator_natures::down"
+#   - "product_indicator_natures::edit"
+#   - "product_indicator_natures::index"
+#   - "product_indicator_natures::list"
+#   - "product_indicator_natures::list_choices"
+#   - "product_indicator_natures::new"
+#   - "product_indicator_natures::show"
+#   - "product_indicator_natures::sort"
+#   - "product_indicator_natures::up"
+#   - "product_indicator_natures::update"
+#   - "product_indicators::create"
+#   - "product_indicators::destroy"
+#   - "product_indicators::edit"
+#   - "product_indicators::index"
+#   - "product_indicators::new"
+#   - "product_indicators::show"
+#   - "product_indicators::update"
 #   - "product_nature_categories::list_product_natures"
 #   - "product_natures::change_quantities"
 #   - "product_natures::create"
@@ -61,6 +87,22 @@
 #   - "product_natures::new"
 #   - "product_natures::show"
 #   - "product_natures::update"
+#   - "product_process_phases::create"
+#   - "product_process_phases::destroy"
+#   - "product_process_phases::edit"
+#   - "product_process_phases::index"
+#   - "product_process_phases::list"
+#   - "product_process_phases::new"
+#   - "product_process_phases::show"
+#   - "product_process_phases::update"
+#   - "product_processes::create"
+#   - "product_processes::destroy"
+#   - "product_processes::edit"
+#   - "product_processes::index"
+#   - "product_processes::list"
+#   - "product_processes::new"
+#   - "product_processes::show"
+#   - "product_processes::update"
 #   - "product_varieties::destroy"
 #   - "product_varieties::update"
 #   - "production_chain_conveyors::create"
@@ -109,8 +151,8 @@
 __minimum__:
   actions:
   - "dashboards::index"
-  - "dashboards::list_my_future_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "dashboards::list_recent_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "dashboards::list_my_future_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "dashboards::list_recent_events # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "dashboards::welcome"
   - "help::index"
   - "help::show"
@@ -461,7 +503,7 @@ manage_districts:
   - "districts::list"
   - "districts::new"
   - "districts::update"
-  - "interfacers::search_for_districts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_districts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
 # Gérer les modèles de document
 manage_document_templates:
   actions:
@@ -499,9 +541,9 @@ manage_entities:
   - "entity_addresses::update"
   - "interfacers::autocomplete_for_area_name"
   - "interfacers::autocomplete_for_entity_origin"
-  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_attorneys_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_clients_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_suppliers_accounts # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
 # Gérer les types de fiche
 manage_entities_natures:
   actions:
@@ -881,7 +923,7 @@ manage_product_categories:
   - "product_nature_categories::edit"
   - "product_nature_categories::index"
   - "product_nature_categories::list"
-  - "product_nature_categories::list_products # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "product_nature_categories::list_products # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_nature_categories::new"
   - "product_nature_categories::show"
   - "product_nature_categories::update"
@@ -900,7 +942,7 @@ manage_products:
   - "product_natures::destroy # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::edit # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "product_natures::list_components # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "product_natures::list_components # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list_prices # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list_stock_moves # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "product_natures::list_stocks # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
@@ -1049,8 +1091,8 @@ manage_taxes:
   actions:
   - "dashboards::accountancy"
   - "dashboards::accountancy"
-  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
-  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_collected_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
+  - "interfacers::search_for_paid_account # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!! # NONEXISTENT ACTION !!!"
   - "taxes::create"
   - "taxes::destroy"
   - "taxes::edit"
