--- a/test/fixtures/product_process_phases.yml
+++ b/test/fixtures/product_process_phases.yml
@@ -18,32 +18,28 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: product_varieties
+# == Table: product_process_phases
 #
-#  code         :integer          
-#  comment      :text             
+#  comment      :string(255)      
 #  created_at   :datetime         not null
 #  creator_id   :integer          
-#  description  :text             
 #  id           :integer          not null, primary key
 #  lock_version :integer          default(0), not null
-#  name         :string(255)      not null
-#  parent_id    :integer          
+#  name         :string(255)      
+#  nature       :string(255)      
+#  phase_delay  :string(255)      
+#  position     :integer          
+#  process_id   :integer          
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
-
-
-class ProductVariety < CompanyRecord
-  attr_accessible :name, :code, :comment, :description, :parent_id
-  has_many :products, :foreign_key => :variety_id
-  has_many :processes, :class_name => "ProductProcess", :foreign_key => :variety_id
-  # has_many :posologies, :class_name => "AnimalPosology", :foreign_key => :animal_race_id
-  belongs_to :parent, :class_name => "ProductVariety"
-  #[VALIDATORS[ Do not edit these lines directly. Use `rake clean:validations`.
-  validates_numericality_of :code, :allow_nil => true, :only_integer => true
-  validates_length_of :name, :allow_nil => true, :maximum => 255
-  validates_presence_of :name
-  #]VALIDATORS]
-   validates_uniqueness_of :name
-end
+#
+# == Fixture: product_process_phases
+#
+# product_process_phases_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
