--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -116,3 +116,84 @@ products_002:
   sex: "male"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+
+warehouses_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  name: "Dock"
+  type: 'Warehouse'
+  nature_id: 1
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+warehouses_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 4
+  name: "Cabanon"
+  type: 'Warehouse'
+  nature_id: 1
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+warehouses_003:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 5
+  name: "Grange"
+  type: 'Warehouse'
+  nature_id: 1
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+land_parcels_001:
+  area_measure: 17.12
+  area_unit_id: 3
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 6
+  name: "Lorem ipsum"
+  nature_id: 1
+  unit_id: 1
+  type: 'LandParcel'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+land_parcels_002:
+  area_measure: 15.2
+  area_unit_id: 3
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 7
+  name: "Lorem ipsum"
+  nature_id: 1
+  unit_id: 1
+  type: 'LandParcel'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+tools_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 8
+  name: "Trator"
+  nature_id: 1
+  type: 'Tool'
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+tools_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 9
+  name: "Useless trator"
+  nature_id: 1
+  type: 'Tool'
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
