--- a/test/fixtures/deal_groups.yml
+++ b/test/fixtures/deal_groups.yml
@@ -18,55 +18,64 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: outgoing_payment_uses
+# == Table: deal_groups
 #
 #  accounted_at     :datetime         
-#  amount           :decimal(19, 4)   default(0.0), not null
+#  closed           :boolean          not null
+#  closed_at        :datetime         
 #  created_at       :datetime         not null
 #  creator_id       :integer          
-#  downpayment      :boolean          not null
-#  expense_id       :integer          not null
+#  credit           :decimal(19, 4)   default(0.0), not null
+#  currency         :string(3)        not null
+#  debit            :decimal(19, 4)   default(0.0), not null
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer          
 #  lock_version     :integer          default(0), not null
-#  payment_id       :integer          not null
+#  origin_id        :integer          not null
+#  origin_type      :string(255)      not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer          
 #
 #
-# == Fixture: outgoing_payment_uses
+# == Fixture: deal_groups
 #
-# outgoing_payment_uses_001:
-#   amount: 0
+# deal_groups_001:
+#   closed: true
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   downpayment: true
-#   expense_id: 1
+#   credit: 0
+#   currency: "Lorem ipsum"
+#   debit: 0
 #   id: 1
-#   payment_id: 1
+#   origin_id: 1
+#   origin_type: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-outgoing_payment_uses_001:
-  amount: 0
+deal_groups_001:
+  closed: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  downpayment: true
-  expense_id: 1
+  credit: 0
+  currency: "Lorem ipsum"
+  debit: 0
   id: 1
-  payment_id: 1
+  origin_id: 1
+  origin_type: "Sale"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-outgoing_payment_uses_002:
-  amount: 0
+deal_groups_001:
+  closed: false
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  downpayment: true
-  expense_id: 1
-  id: 2
-  payment_id: 1
+  credit: 0
+  currency: "Lorem ipsum"
+  debit: 0
+  id: 1
+  origin_id: 1
+  origin_type: "IncomingPayment"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-
+  
