--- a/test/fixtures/incoming_payments.yml
+++ b/test/fixtures/incoming_payments.yml
@@ -30,7 +30,10 @@
 #  created_at            :datetime         not null
 #  created_on            :date             
 #  creator_id            :integer          
+#  currency              :string(3)        not null
+#  deal_group_id         :integer          
 #  deposit_id            :integer          
+#  downpayment           :boolean          default(TRUE), not null
 #  id                    :integer          not null, primary key
 #  journal_entry_id      :integer          
 #  lock_version          :integer          default(0), not null
@@ -45,7 +48,6 @@
 #  to_bank_on            :date             default(CURRENT_DATE), not null
 #  updated_at            :datetime         not null
 #  updater_id            :integer          
-#  used_amount           :decimal(19, 4)   not null
 #
 #
 # == Fixture: incoming_payments
@@ -55,6 +57,8 @@
 #   commission_amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
+#   downpayment: true
 #   id: 1
 #   mode_id: 1
 #   received: true
@@ -62,17 +66,16 @@
 #   to_bank_on: 2009-07-19
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   used_amount: 0
 #
 incoming_payments_001:
   amount: 123
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   id: 1
   payer_id: 1
   mode_id: 1
   number: "IP001"
-  used_amount: 0
   received: true
   scheduled: true
   to_bank_on: 2009-07-19
@@ -83,11 +86,11 @@ incoming_payments_002:
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   payer_id: 1
   id: 2
   number: "IP002"
   mode_id: 1
-  used_amount: 0
   received: true
   scheduled: true
   to_bank_on: 2009-07-19
@@ -98,10 +101,10 @@ incoming_payments_003:
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   payer_id: 3
   id: 3
   mode_id: 1
-  used_amount: 0
   number: "IP003"
   received: true
   scheduled: false
