--- a/test/fixtures/outgoing_payments.yml
+++ b/test/fixtures/outgoing_payments.yml
@@ -26,7 +26,10 @@
 #  created_at       :datetime         not null
 #  created_on       :date             
 #  creator_id       :integer          
+#  currency         :string(3)        not null
+#  deal_group_id    :integer          
 #  delivered        :boolean          default(TRUE), not null
+#  downpayment      :boolean          default(TRUE), not null
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer          
 #  lock_version     :integer          default(0), not null
@@ -38,7 +41,6 @@
 #  to_bank_on       :date             not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer          
-#  used_amount      :decimal(19, 4)   default(0.0), not null
 #
 #
 # == Fixture: outgoing_payments
@@ -47,7 +49,9 @@
 #   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   delivered: true
+#   downpayment: true
 #   id: 1
 #   mode_id: 1
 #   payee_id: 1
@@ -55,16 +59,15 @@
 #   to_bank_on: 2009-07-19
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   used_amount: 0
 #
 outgoing_payments_001:
   amount: 116
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   id: 1
   mode_id: 1
   number: "OP001"
-  used_amount: 0
   payee_id: 1
   responsible_id: 1
   to_bank_on: 2009-07-19
@@ -75,10 +78,10 @@ outgoing_payments_002:
   amount: 156
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   id: 2
   number: "OP002"
   mode_id: 1
-  used_amount: 0
   payee_id: 1
   responsible_id: 1
   to_bank_on: 2009-07-19
