--- a/test/fixtures/transfers.yml
+++ b/test/fixtures/transfers.yml
@@ -26,11 +26,12 @@
 #  created_at       :datetime         not null
 #  created_on       :date             
 #  creator_id       :integer          
+#  currency         :string(3)        not null
+#  deal_group_id    :integer          
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer          
 #  label            :string(255)      
 #  lock_version     :integer          default(0), not null
-#  paid_amount      :decimal(19, 4)   default(0.0), not null
 #  started_on       :date             
 #  stopped_on       :date             
 #  supplier_id      :integer          
@@ -44,8 +45,8 @@
 #   amount: 0
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   currency: "Lorem ipsum"
 #   id: 1
-#   paid_amount: 0
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
