--- a/test/fixtures/affairs.yml
+++ b/test/fixtures/affairs.yml
@@ -18,7 +18,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: deal_groups
+# == Table: affairs
 #
 #  accounted_at     :datetime         
 #  closed           :boolean          not null
@@ -36,13 +36,46 @@
 #  updated_at       :datetime         not null
 #  updater_id       :integer          
 #
-class DealGroup < ActiveRecord::Base
-  #[VALIDATORS[ Do not edit these lines directly. Use `rake clean:validations`.
-  validates_numericality_of :credit, :debit, :allow_nil => true
-  validates_length_of :currency, :allow_nil => true, :maximum => 3
-  validates_length_of :origin_type, :allow_nil => true, :maximum => 255
-  validates_inclusion_of :closed, :in => [true, false]
-  validates_presence_of :credit, :currency, :debit, :origin_type
-  #]VALIDATORS]
-  # attr_accessible :title, :body
-end
+#
+# == Fixture: affairs
+#
+# affairs_001:
+#   closed: true
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   credit: 0
+#   currency: "Lorem ipsum"
+#   debit: 0
+#   id: 1
+#   origin_id: 1
+#   origin_type: "Lorem ipsum"
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
+
+affairs_001:
+  closed: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  credit: 0
+  currency: "Lorem ipsum"
+  debit: 0
+  id: 1
+  origin_id: 1
+  origin_type: "Sale"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+affairs_001:
+  closed: false
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  credit: 0
+  currency: "Lorem ipsum"
+  debit: 0
+  id: 1
+  origin_id: 1
+  origin_type: "IncomingPayment"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
