--- a/test/fixtures/sale_natures.yml
+++ b/test/fixtures/sale_natures.yml
@@ -28,12 +28,12 @@
 #  downpayment             :boolean          not null
 #  downpayment_minimum     :decimal(19, 4)   default(0.0), not null
 #  downpayment_percentage  :decimal(19, 4)   default(0.0), not null
-#  expiration_id           :integer          not null
+#  expiration_delay        :string(255)      not null
 #  id                      :integer          not null, primary key
 #  journal_id              :integer          
 #  lock_version            :integer          default(0), not null
 #  name                    :string(255)      not null
-#  payment_delay_id        :integer          not null
+#  payment_delay           :string(255)      not null
 #  payment_mode_complement :text             
 #  payment_mode_id         :integer          
 #  sales_conditions        :text             
@@ -51,10 +51,10 @@
 #   downpayment: true
 #   downpayment_minimum: 0
 #   downpayment_percentage: 0
-#   expiration_id: 1
+#   expiration_delay: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
-#   payment_delay_id: 1
+#   payment_delay: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #   with_accounting: true
@@ -67,11 +67,11 @@ sale_natures_001:
   downpayment: true
   downpayment_minimum: 300
   downpayment_percentage: 30
-  expiration_id: 1
+  expiration_delay: '15 days, bom, 10 days'
   id: 1
   journal_id: 3
   name: "Lorem ipsum"
-  payment_delay_id: 1
+  payment_delay: '12 days, eom, 1 week ago'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -83,10 +83,10 @@ sale_natures_002:
   downpayment: true
   downpayment_minimum: 0
   downpayment_percentage: 0
-  expiration_id: 1
+  expiration_delay: '10 days'
   id: 2
   name: "Lorem ipsum"
-  payment_delay_id: 1
+  payment_delay: '10 weeks'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
