--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -36,7 +36,7 @@
 #  currency            :string(3)        
 #  delivery_address_id :integer          
 #  downpayment_amount  :decimal(19, 4)   default(0.0), not null
-#  expiration_id       :integer          
+#  expiration_delay    :string(255)      
 #  expired_on          :date             
 #  function_title      :string(255)      
 #  has_downpayment     :boolean          not null
@@ -51,7 +51,7 @@
 #  nature_id           :integer          
 #  number              :string(64)       not null
 #  origin_id           :integer          
-#  payment_delay_id    :integer          not null
+#  payment_delay       :string(255)      not null
 #  payment_on          :date             
 #  pretax_amount       :decimal(19, 4)   default(0.0), not null
 #  reference_number    :string(255)      
@@ -78,7 +78,7 @@
 #   id: 1
 #   letter_format: true
 #   number: "Lorem ipsum"
-#   payment_delay_id: 1
+#   payment_delay: "Lorem ipsum"
 #   pretax_amount: 0
 #   state: "Lorem ipsum"
 #   sum_method: "Lorem ipsum"
@@ -95,14 +95,14 @@ sales_001:
   creator_id: 1
   currency: 'EUR'
   downpayment_amount: 0
-  expiration_id: 1
+  expiration_delay: '1 month'
   expired_on: 2009-07-19
   has_downpayment: true
   id: 1
   letter_format: true
   nature_id: 1
   number: "SO123456"
-  payment_delay_id: 1
+  payment_delay: '90 days'
   state: "draft"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -117,14 +117,14 @@ sales_002:
   created_on: 2009-07-19
   creator_id: 1
   downpayment_amount: 0
-  expiration_id: 1
+  expiration_delay: '1 month'
   expired_on: 2009-07-19
   has_downpayment: true
   id: 2
   letter_format: true
   nature_id: 1
   number: "SO123457"
-  payment_delay_id: 1
+  payment_delay: '45 days'
   state: "draft"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -139,14 +139,14 @@ sales_003:
   created_on: 2009-07-19
   creator_id: 1
   downpayment_amount: 0
-  expiration_id: 1
+  expiration_delay: '2 days'
   expired_on: 2009-07-19
   has_downpayment: true
   id: 3
   letter_format: true
   nature_id: 1
   number: "SO123457"
-  payment_delay_id: 1
+  payment_delay: ''
   state: "order"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -165,7 +165,7 @@ sales_004:
   id: 4
   letter_format: true
   number: "SO7894582"
-  payment_delay_id: 1
+  payment_delay: '3 months'
   pretax_amount: 10
   state: "draft"
   sum_method: "wt"
@@ -182,14 +182,14 @@ sales_005:
   creator_id: 1
   currency: 'EUR'
   downpayment_amount: 0
-  expiration_id: 1
+  expiration_delay: 'end of month'
   expired_on: 2009-07-19
   has_downpayment: true
   id: 5
   letter_format: true
   nature_id: 1
   number: "SO123460"
-  payment_delay_id: 1
+  payment_delay: '15 days, eom'
   state: "order"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
