--- a/test/fixtures/product_localizations.yml
+++ b/test/fixtures/product_localizations.yml
@@ -1,11 +1,77 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2013 Brice Texier, Thibaud Merigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: product_localizations
+#
+#  container_id :integer          
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  nature       :string(255)      not null
+#  product_id   :integer          not null
+#  started_at   :datetime         not null
+#  stopped_at   :datetime         not null
+#  transfer_id  :integer          not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
+#
+#
+# == Fixture: product_localizations
+#
+# product_localizations_001:
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   nature: "Lorem ipsum"
+#   product_id: 1
+#   started_at: 2009-07-19 19:13:59 +02:00
+#   stopped_at: 2009-07-19 19:13:59 +02:00
+#   transfer_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+
+product_localizations_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  nature: "interior"
+  product_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 19:13:59 +02:00
+  transfer_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+
+
+product_localizations_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  nature: "transfer"
+  product_id: 1
+  started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 19:13:59 +02:00
+  transfer_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
