--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -53,7 +53,7 @@ accounts_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  is_debit: true
+  debtor: true
   label: "1 - Tototo"
   name: "Tototo"
   number: "1"
@@ -65,7 +65,7 @@ accounts_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  is_debit: true
+  debtor: true
   label: "12 - Tototo"
   name: "Tototo"
   number: "12"
@@ -76,7 +76,7 @@ accounts_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
-  is_debit: true
+  debtor: true
   label: "681 - Tototo"
   name: "Tototo"
   number: "681"
