--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -57,7 +57,7 @@ custom_fields_001:
   active: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  used_with: entity
+  customized_type: Entity
   id: 1
   name: "Test field"
   nature: "choice"
@@ -69,7 +69,7 @@ custom_fields_002:
   active: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  used_with: entity
+  customized_type: Entity
   id: 2
   name: "Useless field"
   nature: "string"
