--- a/test/fixtures/deposit_items.yml
+++ b/test/fixtures/deposit_items.yml
@@ -49,6 +49,7 @@ deposit_items_001:
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   deposit_id: 3
   id: 1
   quantity: 0
@@ -59,6 +60,7 @@ deposit_items_002:
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   deposit_id: 3
   id: 2
   quantity: 0
@@ -69,6 +71,7 @@ deposit_items_003:
   amount: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   deposit_id: 3
   id: 3
   quantity: 0
