--- a/test/fixtures/entity_link_natures.yml
+++ b/test/fixtures/entity_link_natures.yml
@@ -48,7 +48,7 @@
 #
 entity_link_natures_001:
   name: Standard link
-  propagate_contacts: false
+  propagate_addresses: false
   symmetric: true
   id: 1
   created_at: 2009-07-19 19:13:59 +02:00
@@ -58,7 +58,7 @@ entity_link_natures_001:
 
 entity_link_natures_002:
   name: Standard link
-  propagate_contacts: false
+  propagate_addresses: false
   symmetric: true
   id: 2
   created_at: 2009-07-19 19:13:59 +02:00
