--- a/test/fixtures/entity_natures.yml
+++ b/test/fixtures/entity_natures.yml
@@ -52,7 +52,7 @@ entity_natures_001:
   id: 1
   name: Company
   in_name: true
-  physical: false
+  gender: organization
   active: true
   title: C.
   full_name_format: '[last_name]'
@@ -65,9 +65,21 @@ entity_natures_002:
   id: 2
   name: Useless Company
   in_name: true
-  physical: false
+  gender: undefined
   active: true
   full_name_format: '[last_name]'
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
+
+entity_natures_003:
+  id: 3
+  name: Sir
+  in_name: false
+  gender: man
+  active: true
+  full_name_format: '[first_name] [last_name]'
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
