--- a/test/fixtures/listing_nodes.yml
+++ b/test/fixtures/listing_nodes.yml
@@ -25,6 +25,7 @@
 #  condition_value      :string(255)      
 #  created_at           :datetime         not null
 #  creator_id           :integer          
+#  depth                :integer          default(0), not null
 #  exportable           :boolean          default(TRUE), not null
 #  id                   :integer          not null, primary key
 #  item_listing_id      :integer          
@@ -33,12 +34,14 @@
 #  item_value           :text             
 #  key                  :string(255)      
 #  label                :string(255)      not null
+#  lft                  :integer          
 #  listing_id           :integer          not null
 #  lock_version         :integer          default(0), not null
 #  name                 :string(255)      not null
 #  nature               :string(255)      not null
 #  parent_id            :integer          
 #  position             :integer          
+#  rgt                  :integer          
 #  sql_type             :string(255)      
 #  updated_at           :datetime         not null
 #  updater_id           :integer          
@@ -49,6 +52,7 @@
 # listing_nodes_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   depth: 0
 #   exportable: true
 #   id: 1
 #   label: "Lorem ipsum"
