--- a/test/fixtures/observations.yml
+++ b/test/fixtures/observations.yml
@@ -20,13 +20,16 @@
 # 
 # == Table: observations
 #
+#  author_id    :integer          not null
 #  created_at   :datetime         not null
 #  creator_id   :integer          
 #  description  :text             not null
-#  entity_id    :integer          not null
 #  id           :integer          not null, primary key
 #  importance   :string(10)       not null
 #  lock_version :integer          default(0), not null
+#  observed_at  :datetime         not null
+#  owner_id     :integer          not null
+#  owner_type   :string(255)      not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
@@ -34,19 +37,25 @@
 # == Fixture: observations
 #
 # observations_001:
+#   author_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   description: "Lorem ipsum"
-#   entity_id: 1
 #   id: 1
 #   importance: "Lorem ipsum"
+#   observed_at: 2009-07-19 19:13:59 +02:00
+#   owner_id: 1
+#   owner_type: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 observations_001:
+  author_id: 1
   id: 1
-  entity_id: 1
+  owner_id: 1
+  owner_type: 'Entity'
   importance : normal
+  observed_at: 2009-07-19 19:13:59 +02:00
   description: 'Simple notice'
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -54,10 +63,13 @@ observations_001:
   updater_id: 1
 
 observations_002:
+  author_id: 1
   id: 2
-  entity_id: 1
+  owner_id: 1
+  owner_type: 'Entity'
   importance : normal
   description: 'Simple notice'
+  observed_at: 2009-07-19 19:13:59 +02:00
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
