--- a/test/fixtures/outgoing_payments.yml
+++ b/test/fixtures/outgoing_payments.yml
@@ -64,6 +64,7 @@
 #
 outgoing_payments_001:
   amount: 116
+  cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: 'EUR'
@@ -78,6 +79,7 @@ outgoing_payments_001:
 
 outgoing_payments_002:
   amount: 156
+  cash_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: 'EUR'
