--- a/test/fixtures/product_nature_prices.yml
+++ b/test/fixtures/product_nature_prices.yml
@@ -18,7 +18,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: prices
+# == Table: product_nature_prices
 #
 #  active            :boolean          default(TRUE), not null
 #  amount            :decimal(19, 4)   not null
@@ -38,56 +38,73 @@
 #  updated_at        :datetime         not null
 #  updater_id        :integer          
 #
+#
+# == Fixture: product_nature_prices
+#
+# product_nature_prices_001:
+#   active: true
+#   amount: 0
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   pretax_amount: 0
+#   product_nature_id: 1
+#   tax_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
+product_nature_prices_001:
+  active: true
+  amount: 119.60
+  pretax_amount: 100.00
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  currency: 'EUR'
+  product_nature_id: 1
+  tax_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
+product_nature_prices_002:
+  active: true
+  amount: 119.60
+  pretax_amount: 100.00
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  currency: 'EUR'
+  product_nature_id: 1
+  tax_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
-require 'test_helper'
+product_nature_prices_003:
+  active: true
+  amount: 11.96
+  pretax_amount: 10
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  currency: 'EUR'
+  product_nature_id: 1
+  tax_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
-class PriceTest < ActiveSupport::TestCase
-
-  # Test if the historic is preserved on updates
-  def test_update
-    price = prices(:prices_001)
-    count = Price.count
-    assert !count.zero?
-
-    # Update
-    id, pretax_amount = price.id, price.pretax_amount
-    price.pretax_amount = pretax_amount + 50
-    saved = price.update
-    assert saved, "Price must be saved (#{price.errors.inspect})"
-    assert_equal count + 1, Price.count
-    assert price.stopped_at.nil?
-    old_price = nil
-    assert_nothing_raised do
-      old_price = Price.find(id)
-    end
-    assert_equal pretax_amount, old_price.pretax_amount
-    assert_nothing_raised do
-      saved.reload
-    end
-    assert_not_equal id, saved.id, "Old ID and new ID must be different"
-  end
-
-  # Test if the historic is preserved on destructions
-  def test_destroy
-    price = prices(:prices_003)
-    count = Price.count
-    assert !count.zero?
-
-    # Destroy
-    price.pretax_amount = 158.20
-    assert price.save
-    assert_equal count + 1, Price.count
-    assert price.stopped_at.nil?
-    id = price.id
-    assert price.destroy
-    assert_equal count + 1, Price.count
-    assert_nothing_raised do
-      Price.find(id)
-    end
-    assert_nothing_raised do
-      price.reload
-    end
-    assert !price.stopped_at.nil?, "Price stopped_at must be updated if price is deleted"
-  end
-end
+product_nature_prices_004:
+  active: true
+  amount: 209.30
+  pretax_amount: 175.0
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 4
+  currency: 'EUR'
+  product_nature_id: 3
+  tax_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
